--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -26,7 +26,7 @@
       <ion-label (click)="displayAnswer()" slot="start">显示答案</ion-label>
 
       <ion-button color="primary" (click)="refresh()" slot="start">出题</ion-button>
-      <ion-button color="secondary" slot="start">打印</ion-button>
+      <ion-button color="secondary" slot="start" (click)="print()">打印</ion-button>
 
     </ion-item>
   </ion-content>
