--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      三位数乘两位数
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-content fullscreen>
+    
+    <div class="box">
+      <div class="question" *ngFor="let q of questions">
+        <span>{{q.a}}</span> 
+        <span>{{q.sign}}</span> 
+        <span>{{q.b}}</span> 
+        <span>=</span> 
+        <span *ngIf="showAnswer">{{q.result}}</span>
+      </div>
+    </div>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-item lines="none">
+      <ion-checkbox color="primary" disabled checked="{{isHard}}" slot="start"></ion-checkbox>
+      <ion-label (click)="setHard()" slot="start">加难度</ion-label>
+      <ion-checkbox color="primary" disabled checked="{{showAnswer}}" slot="start"></ion-checkbox>
+      <ion-label (click)="displayAnswer()" slot="start">显示答案</ion-label>
+
+      <ion-button color="primary" (click)="refresh()" slot="start">出题</ion-button>
+      <ion-button color="secondary" slot="start" (click)="print()">打印</ion-button>
+
+    </ion-item>
+  </ion-content>
+  
 </ion-content>
