--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,17 +2,17 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>加法</ion-label>
+      <ion-label>加减法</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>乘法</ion-label>
+      <ion-label>二位乘法</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-label>三位乘法</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
